[metadata]
name = Plant-Script-Test-AndrzejLach89
version = 0.0.1
author = Andrzej Lach
author_email = lahoo1989@gmail.com
description = Utility for testing AutoCAD Plant 3D custom scripts outside Plant 3D
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AndrzejLach89/AutoCAD-Plant-3D-Script-Tester
project_urls =
    Bug Tracker = https://github.com/AndrzejLach89/AutoCAD-Plant-3D-Script-Tester/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src